backend: add API rates/dynamic